@@ -50,7 +50,7 @@ _mpq_cmp_ui (const MP_RAT *op1, unsigned long int num2, unsigned long int den2)
   /* need canonical sign to get right result */
   ASSERT (den1_size > 0);
 
-  if (den2 == 0)
+  if (UNLIKELY (den2 == 0))
     DIVIDE_BY_ZERO;
 
   if (num1_size == 0)
